# enterprise-rag

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE_REVIEW.md  Dockerfile  ENTERPRISE_RAG_SCALE.md  KNOWLEDGE_GRAPH_DESIGN.md  LICENSE  README.md  README_DE.md  RETRIEVAL_CONCEPTS.md  ROADMAP.md  USAGE.md  docker-compose.yml  pyproject.toml
app/: api.py  cache.py  config.py  db.py  llm.py  log.py  models.py  neo4j_amp.py  telemetry.py
app/evaluation/: __init__.py  harness.py
app/ingestion/: citations.py  extractors.py  ingest.py  normalize.py  segment.py
app/reasoning/: evidence.py  pack.py
app/retrieval/: citation_expand.py  hybrid.py  postgres_retrieval.py  query_plan.py  rerank.py
app/tasks/: __init__.py  embeddings.py  ingestion.py
docs/: ARCHITECTURE.md  SQL_QUERIES.md
enterprise_rag/: api.py  cache.py  config.py  db.py  llm.py  log.py  neo4j_amp.py  telemetry.py
enterprise_rag/evaluation/: __init__.py  harness.py  metrics.py
enterprise_rag/ingestion/: crawler.py  extractors.py  ingest.py  segment.py  versioning.py
enterprise_rag/reasoning/: evidence.py  pack.py
enterprise_rag/retrieval/: citation_expand.py  complexity.py  hybrid.py  postgres_retrieval.py  query_plan.py  rerank.py
enterprise_rag/tasks/: __init__.py  embeddings.py  ingestion.py
k8s/: configmap.yaml  deployment.yaml  ingress.yaml  namespace.yaml  secret.yaml  service.yaml
k8s/neo4j/: deployment.yaml  pvc.yaml  secret.yaml  service.yaml
k8s/postgres/: deployment.yaml  pvc.yaml  secret.yaml  service.yaml
scripts/: crawl_local_match.py  crawl_url.py  debug_crawl.py  embed_windows.py  evaluate.py  ingest_folder.py  init_db.py  migrate_feedback.py  query.py  worker.py
sql/: schema.sql
sql/migrations/: 001_feedback_table.sql  002_add_nomic_embedding.sql  003_add_versioning.sql  004_add_http_cache.sql
tests/: __init__.py  eval_cases.json  test_metrics.py
